--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bookingapp",
+  "name": "hybridhome",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,8 +7,11 @@
   "scripts": {
     "start": "nodemon index.js"
   },
+  "engines": {
+    "node": "16.17.1"
+  },
   "keywords": [],
-  "author": "",
+  "author": "hope olaniyi",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
