--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "hybrid-api-wrub.vercel.app/api",
+  "proxy": "hybrid-apis.vercel.app/api",
   "name": "hybridhome",
   "version": "1.0.0",
   "description": "",
