--- a/api/package.json
+++ b/api/package.json
@@ -2,13 +2,14 @@
   "name": "hybridhome",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
+  "main": "./api/index.js",
   "scripts": {
     "start": "nodemon index.js"
   },
   "engines": {
-    "node": "16.17.1"
+    "node": "16.17.1",
+    "npm": "8.15.0"
   },
   "keywords": [],
   "author": "hope olaniyi",
