--- a/api/package.json
+++ b/api/package.json
@@ -2,8 +2,7 @@
   "name": "hybridhome",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
-  "main": "./api/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
   },
