--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,10 @@
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+    "node": "16.17.1",
+    "npm": "8.15.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
