--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,3 +1,6 @@
 {
-  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+  "version": 2,
+  "name": "music-album",
+  "builds": [{ "src": "./api/index.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(./api*)", "dest": "./api/index.js" }]
 }
